tercer intento de deployment, cambios en package.json

--- a/proyect/Landing-page-mobileFirst/package.json
+++ b/proyect/Landing-page-mobileFirst/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm --prefix ./landing-page-mobileFirst run build",
+    "start:frontend": "npm --prefix ./landing-page-mobileFirst run dev",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
