--- a/proyect/package.json
+++ b/proyect/package.json
@@ -5,7 +5,7 @@
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "start:frontend": "npm --prefix ./landing-page-mobileFirst run dev",
     "start:backend": "nodemon ./server/src/server.js",
-    "build": "vite build"
+    "build": "npm --prefix ./landing-page-mobileFirst run build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
