--- a/proyect/Landing-page-mobileFirst/package.json
+++ b/proyect/Landing-page-mobileFirst/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^11.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
