--- a/proyect/Landing-page-mobileFirst/package.json
+++ b/proyect/Landing-page-mobileFirst/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@unpic/react": "^1.0.0",
+    "blendy": "^0.0.1",
     "framer-motion": "^11.14.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
